# FreeRDP

./: .gitignore  meson.build  meson.options
.github/workflows/: meson.yml
channels/: meson.build
channels/client/: meson.build
channels/server/: meson.build
client/: meson.build
client/SDL/: meson.build
client/SDL/SDL2/: meson.build
client/SDL/SDL2/dialogs/: meson.build
client/SDL/SDL2/dialogs/res/: meson.build
client/SDL/SDL3/: meson.build
client/SDL/SDL3/dialogs/: meson.build
client/SDL/SDL3/dialogs/res/: meson.build
client/SDL/common/: meson.build
client/SDL/common/aad/: meson.build
client/SDL/common/res/: meson.build
client/Sample/: meson.build
client/Wayland/: meson.build
client/Windows/: meson.build
client/Windows/cli/: meson.build
client/X11/: meson.build
client/X11/cli/: meson.build
client/common/: meson.build
include/: meson.build
include/freerdp/: meson.build
libfreerdp/: meson.build
libfreerdp/cache/: meson.build
libfreerdp/codec/: meson.build
libfreerdp/common/: meson.build
libfreerdp/core/: meson.build
libfreerdp/crypto/: meson.build
libfreerdp/emu/: meson.build
libfreerdp/gdi/: meson.build
libfreerdp/locale/: meson.build
libfreerdp/primitives/: meson.build
libfreerdp/utils/: meson.build
meson/: freerdp_version.py  gen_channel_tables.py  gen_cmake_package.py  gen_sdl_resource.py  gen_settings_keys.py
meson/tests/cmake-consumer/: CMakeLists.txt  main.c
rdtk/: meson.build
rdtk/include/: meson.build
rdtk/include/rdtk/: meson.build
rdtk/librdtk/: meson.build
server/: meson.build
server/Sample/: meson.build
server/common/: meson.build
server/proxy/: meson.build
server/proxy/cli/: meson.build
server/proxy/modules/: meson.build
server/shadow/: meson.build
server/shadow/Sample/: meson.build
server/shadow/Win/: meson.build
server/shadow/X11/: meson.build
server/shadow/cli/: meson.build
uwac/: meson.build
uwac/include/: meson.build
uwac/include/uwac/: meson.build
uwac/libuwac/: meson.build
winpr/: meson.build
winpr/include/: meson.build
winpr/include/winpr/: meson.build
winpr/libwinpr/: meson.build
winpr/libwinpr/bcrypt/: meson.build
winpr/libwinpr/clipboard/: meson.build
winpr/libwinpr/comm/: meson.build
winpr/libwinpr/credentials/: meson.build
winpr/libwinpr/crt/: meson.build
winpr/libwinpr/crypto/: meson.build
winpr/libwinpr/dsparse/: meson.build
winpr/libwinpr/environment/: meson.build
winpr/libwinpr/error/: meson.build
winpr/libwinpr/file/: meson.build
winpr/libwinpr/handle/: meson.build
winpr/libwinpr/input/: meson.build
winpr/libwinpr/interlocked/: meson.build
winpr/libwinpr/io/: meson.build
winpr/libwinpr/memory/: meson.build
winpr/libwinpr/ncrypt/: meson.build
winpr/libwinpr/nt/: meson.build
winpr/libwinpr/path/: meson.build
winpr/libwinpr/pipe/: meson.build
winpr/libwinpr/pool/: meson.build
winpr/libwinpr/registry/: meson.build
winpr/libwinpr/rpc/: meson.build
winpr/libwinpr/security/: meson.build
winpr/libwinpr/shell/: meson.build
winpr/libwinpr/smartcard/: meson.build
winpr/libwinpr/sspi/: meson.build
winpr/libwinpr/sspicli/: meson.build
winpr/libwinpr/synch/: meson.build
winpr/libwinpr/sysinfo/: meson.build
winpr/libwinpr/sysinfo/cpufeatures/: meson.build
winpr/libwinpr/thread/: meson.build
winpr/libwinpr/timezone/: meson.build
winpr/libwinpr/utils/: meson.build
winpr/libwinpr/winsock/: meson.build
winpr/libwinpr/wtsapi/: meson.build
winpr/tools/: meson.build
